Finished integrating Jacquelyn's recsys

--- a/recsys/cikguhub_recs/cikgu_recs.ipynb
+++ b/recsys/cikguhub_recs/cikgu_recs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "fbe1d63c",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "53375cd9",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "38f6dd3f",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "1ff0dfd1",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "5825e68f",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "id": "bd2f8220",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 2, 0, 1, 2, 1, 0, -1, 0, -1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coded_level1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "417b97e9",
    "metadata": {},
    "outputs": [
@@ -209,7 +230,7 @@
        "4           3  [T, C, L, D, M]  [T, *]               1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "e67cee17",
    "metadata": {},
    "outputs": [],
@@ -249,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "816db986",
    "metadata": {},
    "outputs": [
@@ -384,7 +405,7 @@
        "4        1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "f1fe5504",
    "metadata": {},
    "outputs": [],
@@ -413,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "ce84f7af",
    "metadata": {},
    "outputs": [],
@@ -456,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "131ddcae",
    "metadata": {},
    "outputs": [],
@@ -491,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "26a511e9",
    "metadata": {},
    "outputs": [
@@ -596,7 +617,7 @@
        "M          1  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "4e2e8e11",
    "metadata": {},
    "outputs": [
@@ -628,7 +649,7 @@
        "['D', 'T']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
