Updated email template

--- a/recsys/cikguhub_recs/cikgu_email.ipynb
+++ b/recsys/cikguhub_recs/cikgu_email.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "M          1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "['D', 'T']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,41 +349,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(221,\n",
+       " b'2.0.0 closing connection ei10-20020a05690c2a0a00b00545afe68ecdsm3843490ywb.146 - gsmtp')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def send_email(subject, body, sender, recipients, password):\n",
-    "    \n",
-    "    msg = MIMEMultipart()\n",
-    "    msg['Subject'] = subject\n",
-    "    msg['From'] = sender\n",
-    "    msg['To'] = ', '.join(recipients)\n",
-    "\n",
-    "    msg.attach(MIMEText(body))\n",
-    "\n",
-    "    # Sign off with Logo\n",
-    "    attachment = 'cikgu_logo.png'\n",
-    "    msgText = MIMEText('<br/><br/>Best regards,<br/><b>%s</b><br/><img src=\"cid:%s\"/ width=\"200\"><br/>' % (\"Christopher Kok\", attachment), 'html')   \n",
-    "    msg.attach(msgText)   \n",
-    "\n",
-    "    with open(attachment, 'rb') as fp:\n",
-    "        img = MIMEImage(fp.read())\n",
-    "    img.add_header('Content-ID', '<{}>'.format(attachment))\n",
-    "    msg.attach(img)\n",
-    "\n",
-    "    smtp_server = smtplib.SMTP_SSL('smtp.gmail.com', 465)\n",
-    "    smtp_server.login(sender, password)\n",
-    "    smtp_server.sendmail(sender, recipients, msg.as_string())\n",
-    "    smtp_server.quit()\n",
-    "\n",
     "subject = \"[Example] CikguHub: Here's what you should watch next!\"\n",
-    "body = \"Dear X,\\n\\nThank you for being one of our first supporters! Part of being a CikguHub member is getting personalized video recommendations based on your preferences and watch history. Here is the next video we think you should check out!\\n\\nEpisode 1: Introduction to Collaborative Learning - https://www.cikguhub.my/courses/cikguhub/introduction_to_collaborative_learning/?cl=1\"\n",
+    "# body = \"Dear X,\\n\\nThank you for being one of our first supporters! Part of being a CikguHub member is getting personalized video recommendations based on your preferences and watch history. Here is the next video we think you should check out!\\n\\nEpisode 1: Introduction to Collaborative Learning - https://www.cikguhub.my/courses/cikguhub/introduction_to_collaborative_learning/?cl=1\"\n",
+    "body = \"\"\"\n",
+    "<html>\n",
+    "<head>\n",
+    "  <meta http-equiv=\"Content-Type\" content=\"text/html; charset=UTF-8\" />\n",
+    "  <title>CikguHub Recommendations</title>\n",
+    "  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"/>\n",
+    "</head>\n",
+    "\n",
+    "<body style=\"margin: 0; padding: 0;\">\n",
+    "  <table role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"100%\">\n",
+    "    <tr>\n",
+    "      <td style=\"padding: 20px 0 30px 0;\">\n",
+    "\n",
+    "        <table align=\"center\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"600\" style=\"border-collapse: collapse; border: 1px solid #cccccc;\">\n",
+    "          <tr>\n",
+    "            <td align=\"center\" bgcolor=\"#f3d239\" style=\"padding: 40px 0 30px 0;\">\n",
+    "              <img src=\"./cikgu_header.png\" alt=\"learn, connect, grow\" width=\"300\" style=\"display: block;\" />\n",
+    "            </td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <td bgcolor=\"#ffffff\" style=\"padding: 40px 30px 40px 30px;\">\n",
+    "              <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"100%\" style=\"border-collapse: collapse;\">\n",
+    "                <tr>\n",
+    "                  <td style=\"color: #153643; font-family: Arial, sans-serif;\">\n",
+    "                    <h1 style=\"font-size: 24px; margin: 0;\">CikguHub's Recommended Videos!</h1>\n",
+    "                  </td>\n",
+    "                </tr>\n",
+    "                <tr>\n",
+    "                  <td style=\"color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 24px; padding: 20px 0 30px 0;\">\n",
+    "                    <p style=\"margin: 0;\">Thank you for being one of our first supporters! Part of being a CikguHub member is getting personalized video recommendations based on your preferences and watch history. Here is the next couple of videos we think you should check out:</p>\n",
+    "                  </td>\n",
+    "                </tr>\n",
+    "                <tr>\n",
+    "                  <td>\n",
+    "                    <table role=\"presentation\" style=\"width:100%;border-collapse:collapse;border:0;border-spacing:0;\">\n",
+    "                      <tr>\n",
+    "                        <td style=\"width:260px;padding:0;vertical-align:top;color:#153643;\">\n",
+    "                          <p style=\"margin:0 0 25px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;\"><img src=\"./thumbnail_1.jpg\" alt=\"Thumbnail 1\" width=\"260\" style=\"height:auto;display:block;\" /></p>\n",
+    "                          <p style=\"margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;\"><a href=\"https://www.cikguhub.my/courses/cikguhub/1676862439274/episode_2/?cl=1\" style=\"color:#000000;text-decoration:underline;\">5 components of Social-Emotional Learning</a></p>\n",
+    "                        </td>\n",
+    "                        <td style=\"width:20px;padding:0;font-size:0;line-height:0;\">&nbsp;</td>\n",
+    "                        <td style=\"width:260px;padding:0;vertical-align:top;color:#153643;\">\n",
+    "                          <p style=\"margin:0 0 25px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;\"><img src=\"./thumbnail_2.jpg\" alt=\"Thumbnail 2\" width=\"260\" style=\"height:auto;display:block;\" /></p>\n",
+    "                          <p style=\"margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;\"><a href=\"https://www.cikguhub.my/courses/cikguhub/introduction_to_collaborative_learning/\" style=\"color:#000000;text-decoration:underline;\">Introduction to Collaborative Learning</a></p>\n",
+    "                        </td>\n",
+    "                      </tr>\n",
+    "                    </table>\n",
+    "                  </td>\n",
+    "                </tr>\n",
+    "              </table>\n",
+    "            </td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <td bgcolor=\"#f3d239\" style=\"padding: 30px 30px;\">\n",
+    "                <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"100%\" style=\"border-collapse: collapse;\">\n",
+    "                <tr>\n",
+    "                  <td style=\"color: #00000; font-family: Arial, sans-serif; font-size: 14px;\">\n",
+    "                    <p style=\"margin: 0;\">&reg; CikguHub 2023<br/></p>\n",
+    "                  </td>\n",
+    "                  <td align=\"right\">\n",
+    "                    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"border-collapse: collapse;\">\n",
+    "                    </table>\n",
+    "                  </td>\n",
+    "                </tr>\n",
+    "              </table>\n",
+    "            </td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "\n",
+    "      </td>\n",
+    "    </tr>\n",
+    "  </table>\n",
+    "</body>\n",
+    "</html>\n",
+    "\"\"\"\n",
     "sender = \"cikguhub@gmail.com\"\n",
     "recipients = [\"pherkok@gmail.com\", \"janice@myedvolution.com\", \"melissa@myedvolution.com\", \"jqs@umich.edu\", \"chriskok@umich.edu\"]\n",
+    "# recipients = [\"pherkok@gmail.com\"]\n",
     "password = keys['google_app_pass']\n",
     "\n",
-    "send_email(subject, body, sender, recipients, password)"
+    "msg = MIMEMultipart()\n",
+    "msg['Subject'] = subject\n",
+    "msg['From'] = sender\n",
+    "msg['To'] = ', '.join(recipients)\n",
+    "\n",
+    "# Sign off with Logo\n",
+    "attachment = 'cikgu_logo.png'\n",
+    "\n",
+    "with open(attachment, 'rb') as fp:\n",
+    "    img = MIMEImage(fp.read())\n",
+    "    img.add_header('Content-Disposition', 'attachment', filename='cikgu_header.png')\n",
+    "    img.add_header('X-Attachment-Id', '0')\n",
+    "    img.add_header('Content-ID', '<0>')\n",
+    "    fp.close()\n",
+    "    msg.attach(img)\n",
+    "\n",
+    "with open('is5MVZeiju8-HD.jpg', 'rb') as fp:\n",
+    "    img = MIMEImage(fp.read())\n",
+    "    img.add_header('Content-Disposition', 'attachment', filename='thumbnail_1.jpg')\n",
+    "    img.add_header('X-Attachment-Id', '1')\n",
+    "    img.add_header('Content-ID', '<1>')\n",
+    "    fp.close()\n",
+    "    msg.attach(img)\n",
+    "\n",
+    "with open('ywyB-Iec0C4-HD.jpg', 'rb') as fp:\n",
+    "    img = MIMEImage(fp.read())\n",
+    "    img.add_header('Content-Disposition', 'attachment', filename='thumbnail_2.jpg')\n",
+    "    img.add_header('X-Attachment-Id', '21')\n",
+    "    img.add_header('Content-ID', '<2>')\n",
+    "    fp.close()\n",
+    "    msg.attach(img)\n",
+    "\n",
+    "# Attach the HTML email\n",
+    "string = body\n",
+    "\n",
+    "# Replace the relative path to images with ContentID\n",
+    "html_string = string.replace(\"./thumbnail_1.jpg\", \"cid:1\")\n",
+    "html_string = html_string.replace(\"./thumbnail_2.jpg\", \"cid:2\")\n",
+    "html_string = html_string.replace(\"./cikgu_header.png\", \"cid:0\")\n",
+    "\n",
+    "msg.attach(MIMEText(html_string, 'html', 'utf-8'))\n",
+    "\n",
+    "msgText = MIMEText('<br/><br/>Best regards,<br/><b>%s</b><br/>' % (\"The CikguHub Team\"), 'html')   \n",
+    "msg.attach(msgText)   \n",
+    "\n",
+    "smtp_server = smtplib.SMTP_SSL('smtp.gmail.com', 465)\n",
+    "smtp_server.login(sender, password)\n",
+    "smtp_server.sendmail(sender, recipients, msg.as_string())\n",
+    "smtp_server.quit()"
    ]
   },
   {
